--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ full_width: false
   display: block;
   margin-left: auto;
   margin-right: auto;
+  background: url('loading.jpg') no-repeat;
+  background-position: center center;
+  min-height: 200px;
+
 }
 
 /* Create three equal columns that floats next to each other */
