changing feed image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- Header -->
 			<div id="header" style="overflow:hidden;">
 				<div>
-            <img id="live-img" src="http://217.7.233.140/cgi-bin/faststream.jpg?stream=full&fps=0" alt="Live Cam"/>
+            <img id="live-img" src="https://tv.carlson.space/live.jpg" alt="Live Cam"/>
 				</div>
 			</div>
 
